<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityMauro"
    tools:ignore="ExtraText">

    <!-- Checkboxes -->
    <CheckBox
        android:id="@+id/cb_jamon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jamon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></CheckBox>

    <CheckBox
        android:id="@+id/cb_champi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/champinhones"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></CheckBox>

    <CheckBox
        android:id="@+id/cb_aceitunas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/aceitunas"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_jamon"></CheckBox>

    <CheckBox
        android:id="@+id/cb_todasOpciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:text="@string/selecTodo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_aceitunas"
        app:layout_constraintTop_toTopOf="parent"></CheckBox>

    <!-- Botones -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cb_todasOpciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <RadioButton
            android:id="@+id/aDomicilio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aDomi"/>

        <RadioButton
            android:id="@+id/enLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationX="200dp"
            android:translationY="-31dp"
            android:text="@string/enLoc"
            app:layout_constraintStart_toEndOf="@+id/aDomicilio"
            android:layout_marginStart="16dp"/>
    </RadioGroup>
    />
</androidx.constraintlayout.widget.ConstraintLayout>